[metadata]
name = codesim
version = attr: codesim.__version__
author = StardustDL
author_email = stardustdl@163.com
description = A tool to measure code similarity.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/codesim
project_urls =
    Source Code = https://github.com/StardustDL/codesim
    Changes = https://github.com/StardustDL/codesim/releases
    Documentation = https://github.com/StardustDL/codesim
    Bug Tracker = https://github.com/StardustDL/codesim/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
    click>=8.0.3
    ortools>=9.1.9490

[options.entry_points]
console_scripts =
    codesim = codesim.__main__:main